[package]
name = "pallet-hookpoints"
version = "1.0.0"
description = "A pallet for managing ink! callbacks"
authors = ["Christian Peters <chp@deep-ink.ventures>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/deep-ink-ventures/pallet-hookpoints/"
homepage = "https://github.com/deep-ink-ventures/pallet_hookpoints"
readme = "README.md"
keywords = ["substrate", "ink", "polkadot"]
categories = ["blockchain", "smart-contracts", "web3"]

[dependencies]
codec = { package = "parity-scale-codec", version="3.6", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "22.0.0", default-features = false, optional = true }
frame-support = { version = "22.0.0", default-features = false }
frame-system = { version = "22.0.0", default-features = false }
scale-info = { version = "2.9", default-features = false, features = ["derive"] }
sp-std = { version = "9.0.0", default-features = false }
pallet-contracts = { version = "21.0.0", default-features = false }
pallet-contracts-primitives = { version = "25.0.0", default-features = false }
pallet-timestamp = { version = "21.0.0", default-features = false }
pallet-balances = { version = "22.0.0", default-features = false }
sp-core = { version = "22.0.0", default-features = false }

[dev-dependencies]
sp-io = { version = "24.0.0", default-features = false }
sp-runtime = { version = "25.0.0", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "scale-info/std",
    "sp-runtime/std",
    "pallet-balances/std",
    "pallet-contracts-primitives/std",
    "pallet-contracts/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
